--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
       "autoprefixer",
       "postcss"
     ],
-    "scripts": [
-      "start",
-      "build",
-      "serve"
-    ],
+    "scripts": {
+      "dev": "vite",
+      "start": "vite",
+      "build": "vite build",
+      "preview": "vite preview",
+      "deploy": "gh-pages -d build"
+    },
+
     "warning": "🚨 CRITICAL: DO NOT REMOVE OR MODIFY ABOVE DEPENDENCIES - Required for app functionality"
   },
   "dependencies": {
@@ -55,11 +58,13 @@
     "tailwindcss-elevation": "^2.0.0",
     "tailwindcss-fluid-type": "^2.0.7"
   },
-  "scripts": {
-    "start": "vite",
-    "build": "vite build --sourcemap",
-    "serve": "vite preview"
-  },
+    "scripts": {
+      "dev": "vite",
+      "start": "vite",
+      "build": "vite build",
+      "preview": "vite preview",
+      "deploy": "gh-pages -d build"
+    },
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -86,6 +91,7 @@
     "@types/istanbul-reports": "^3.0.4",
     "@vitejs/plugin-react": "4.3.4",
     "autoprefixer": "10.4.2",
+    "gh-pages": "^6.3.0",
     "postcss": "8.4.8",
     "tailwindcss": "3.4.6",
     "vite": "5.0.0",
